--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Verificador de Año Bisiesto</h1>
+    <form id="bisiesto-form">
+      <label for="anio">Año:</label>
+      <input type="number" id="anio" />
+      <input type="submit" value="Verificar" id="verificar-button" />
     </form>
     <div id="resultado-div"></div>
 
